# EigenBench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/eigenbench/: __init__.py  api.py  bt.py  data_utils.py  eigentrust.py  evaluation.py  pipeline.py
